--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,1 +1,20 @@
+server:
+  port: ${SERVER_PORT:8000}
 
+spring:
+  datasource:
+    driver-class-name: ${ALGOBRAIN_ANALYTICS_DB_DRIVER:org.postgresql.Driver}
+    host: ${DB_HOST:localhost}
+    port: ${DB_PORT:5432}
+    name: ${POSTGRES_DB:postgres}
+    url: jdbc:postgresql://${spring.datasource.host}:${spring.datasource.port}/${spring.datasource.name}
+    username: ${POSTGRES_USER:postgres}
+    password: ${POSTGRES_PASSWORD:password}
+
+  jpa:
+    show-sql: 'true'
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+    hibernate:
+      ddl-auto: update
